# linuxcnc-grpc

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  client.go  client_test.go  generate_protos.sh  go.mod  pyproject.toml
.github/workflows/: ci.yml  docs.yml  e2e.yml  release-node.yml  release-python.yml  release-rust.yml  release.yml  version-bump.yml
docs/: README.md  api-reference.md  e2e-testing.md  examples.md  getting-started.md  hugo.toml  server.md  tutorial.md
docs/content/: _index.md  api-reference.md  e2e-testing.md  examples.md  getting-started.md  server-setup.md  server.md  tutorial.md
examples/: README.md  get_status.py  hal_query.py  jog_axis.py  mdi_command.py  stream_status.py
examples/go/: README.md  go.mod
examples/go/cmd/get_status/: main.go
examples/go/cmd/hal_query/: main.go
examples/go/cmd/jog_axis/: main.go
examples/go/cmd/mdi_command/: main.go
examples/go/cmd/stream_status/: main.go
examples/go/cmd/upload_file/: main.go
examples/node/: README.md  get_status.ts  hal_query.ts  jog_axis.ts  mdi_command.ts  package-lock.json  package.json  stream_status.ts  tsconfig.json  upload_file.ts
examples/python/: README.md  get_status.py  hal_query.py  jog_axis.py  mdi_command.py  stream_status.py  upload_file.py
examples/rust/: Cargo.toml
proto/: hal.proto  linuxcnc.proto
scripts/: build-all.sh  build-node.sh  build-python.sh  build-rust.sh  common.sh  generate-package-readmes.sh  generate-protos.sh  publish-all.sh  publish-node.sh  publish-python.sh  publish-rust.sh  sync-versions.sh  wait-for-linuxcnc.py
src/linuxcnc_grpc/: __init__.py  hal_mapper.py  hal_service.py  linuxcnc_mapper.py  linuxcnc_service.py  server.py
src/linuxcnc_grpc/_generated/: __init__.py
src/linuxcnc_grpc_server/: __init__.py  hal_mapper.py  hal_service.py  linuxcnc_mapper.py  linuxcnc_service.py  server.py
src/linuxcnc_grpc_server/_generated/: __init__.py  hal_pb2.py  hal_pb2_grpc.py  linuxcnc_pb2.py  linuxcnc_pb2_grpc.py
src/linuxcnc_grpc_server/proto/: hal.proto  linuxcnc.proto
tests/: conftest.py  mock_server.py  test_e2e.py  test_examples_syntax.py  test_hal_mapper.py  test_hal_service.py  test_integration.py  test_linuxcnc_mapper.py  test_linuxcnc_service.py
tests/fixtures/: hal_status.json  linuxcnc_status.json
